fix blog post OL alignment issue

--- a/local-dev/scss/view-specific/blog/_blog-post.scss
+++ b/local-dev/scss/view-specific/blog/_blog-post.scss
@@ -2,7 +2,8 @@
 
   #{$left-container} {
     ul,
-    dl {
+    dl,
+    ol {
       padding-left:15px;
       padding-bottom:$spacing-main-cont;
     }
@@ -12,6 +13,7 @@
     }
     ol {
       list-style-type:decimal;
+      padding-left:22px;
     }
   }
 
